--- a/res/layout/menu.xml
+++ b/res/layout/menu.xml
@@ -1,12 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/menu"
-    />
-</LinearLayout>
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/bkgrnd">
+    <RelativeLayout
+        android:id="@+id/RelativeLayout01"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true">
+        <ImageView
+            android:id="@+id/ImageView_MenuHeader"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/icon"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"></ImageView>
+        <TextView
+            android:id="@+id/TextView01"
+            android:layout_height="wrap_content"
+            android:text="@string/menu"
+            android:textSize="@dimen/screen_title_size"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="10"
+            android:layout_width="wrap_content"
+            android:layout_gravity="fill_horizontal|center"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:shadowColor="@android:color/white"
+            android:textColor="@color/title_color"></TextView>
+        <ImageView
+            android:id="@+id/ImageView_MenuHeader2"
+            android:layout_height="wrap_content"
+            android:src="@drawable/icon"
+            android:layout_gravity="right|center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"></ImageView>
+    </RelativeLayout>
+    <ListView
+        android:layout_height="wrap_content"
+        android:id="@+id/ListView_Menu"
+        android:layout_width="match_parent"
+        android:divider="@drawable/divider"
+        android:listSelector="@drawable/selector"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/RelativeLayout01"></ListView>
+    <ImageView
+        android:id="@+id/ImageView_MenuBottom"
+        android:src="@drawable/half"
+        android:layout_alignParentBottom="true"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:adjustViewBounds="true"
+        android:scaleType="centerInside"></ImageView>
+</RelativeLayout>
