--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -1,8 +1,12 @@
 <resources>
 
-    <!-- Default screen margins, per the Android Design guidelines. -->
+    <!-- splash screen -->
     <dimen name="logo_size">48dp</dimen>
     <dimen name="version_size">15dp</dimen>
     <dimen name="version_spacing">3dp</dimen>
+    
+    <!-- menu screen -->
+    <dimen name="screen_title_size">40dp</dimen>
+    <dimen name="menu_item_size">34dp</dimen>
 
 </resources>
