--- a/res/layout/help.xml
+++ b/res/layout/help.xml
@@ -3,10 +3,57 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/help"
-    />
+    android:background="@drawable/bkgrnd">
+    <RelativeLayout
+        android:id="@+id/RelativeLayout01"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/ImageView_Header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/icon"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"></ImageView>
+        <TextView
+            android:id="@+id/TextView01"
+            android:layout_height="wrap_content"
+            android:text="@string/help"
+            android:textSize="@dimen/screen_title_size"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="10"
+            android:layout_width="wrap_content"
+            android:layout_gravity="fill_horizontal|center"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:shadowColor="@android:color/white"
+            android:textColor="@color/title_color"></TextView>
+        <ImageView
+            android:id="@+id/ImageView_Header2"
+            android:layout_height="wrap_content"
+            android:src="@drawable/icon"
+            android:layout_gravity="right|center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"></ImageView>
+    </RelativeLayout>
+	<TextView
+        android:id="@+id/TextView_HelpText"
+        android:textColor="@color/title_color"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:autoLink="all"
+        android:isScrollContainer="true"
+        android:textStyle="italic"
+        android:drawablePadding="@dimen/help_text_drawable_padding"
+        android:textColorLink="@color/logo_color"
+        android:linksClickable="true"
+        android:fadingEdgeLength="@dimen/help_text_fading"
+        android:fadingEdge="vertical"
+        android:scrollbars="vertical"
+        android:padding="@dimen/help_text_padding"
+        android:textSize="@dimen/help_text_size"
+        android:scrollbarStyle="outsideOverlay"
+        android:bufferType="spannable"></TextView>
 </LinearLayout>
