--- a/res/layout/scores.xml
+++ b/res/layout/scores.xml
@@ -1,12 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/scores"
-    />
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/bkgrnd">
+    <RelativeLayout
+        android:id="@+id/RelativeLayout01"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/ImageView_Header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/icon"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"></ImageView>
+        <TextView
+            android:id="@+id/TextView01"
+            android:layout_height="wrap_content"
+            android:text="@string/scores"
+            android:textSize="@dimen/screen_title_size"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="10"
+            android:layout_width="wrap_content"
+            android:layout_gravity="fill_horizontal|center"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:shadowColor="@android:color/white"
+            android:textColor="@color/title_color"></TextView>
+        <ImageView
+            android:id="@+id/ImageView_Header2"
+            android:layout_height="wrap_content"
+            android:src="@drawable/icon"
+            android:layout_gravity="right|center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"></ImageView>
+    </RelativeLayout>
+	<TabHost
+	    android:id="@+id/TabHost1"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent">
+	    <LinearLayout
+	        android:orientation="vertical"
+	        android:layout_width="match_parent"
+	        android:layout_height="match_parent">
+	        <TabWidget 
+	            android:id="@android:id/tabs"
+	            android:layout_width="match_parent" 
+	            android:layout_height="wrap_content"/>
+	        <FrameLayout
+	            android:id="@android:id/tabcontent"
+			    android:layout_width="match_parent"
+			    android:layout_height="match_parent">
+	            <ScrollView
+	                android:id="@+id/ScrollViewAllScores"
+				    android:layout_width="match_parent"
+				    android:layout_height="match_parent"
+	                android:scrollbars="vertical">
+	                <TableLayout
+	                    android:id="@+id/TableLayout_AllScores"
+					    android:layout_width="match_parent"
+					    android:layout_height="match_parent"
+	                    android:stretchColumns="*">
+	                </TableLayout>
+	            </ScrollView>
+	            <ScrollView
+	                android:id="@+id/ScrollViewFriendScores"
+				    android:layout_width="match_parent"
+				    android:layout_height="match_parent"
+	                android:scrollbars="vertical">
+	                <TableLayout
+	                    android:id="@+id/TableLayout_FriendScores"
+					    android:layout_width="match_parent"
+					    android:layout_height="match_parent"
+	                    android:stretchColumns="*">
+	                </TableLayout>
+	            </ScrollView>
+	        </FrameLayout>
+	    </LinearLayout>
+	</TabHost>
 </LinearLayout>
