--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -1,12 +1,149 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/settings"
-    />
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/bkgrnd">
+    <RelativeLayout
+        android:id="@+id/RelativeLayout01"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <ImageView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/ImageView_MenuHeader"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/icon"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"></ImageView>
+        <TextView
+            android:id="@+id/TextView01"
+            android:layout_height="wrap_content"
+            android:text="@string/settings"
+            android:textSize="@dimen/screen_title_size"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="10"
+            android:layout_width="wrap_content"
+            android:layout_gravity="fill_horizontal|center"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:shadowColor="@android:color/white"
+            android:textColor="@color/title_color"></TextView>
+        <ImageView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/ImageView_MenuHeader2"
+            android:layout_height="wrap_content"
+            android:src="@drawable/icon"
+            android:layout_gravity="right|center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"></ImageView>
+    </RelativeLayout>
+    <ScrollView
+        android:id="@+id/ScrollView01"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:isScrollContainer="true"
+        android:scrollbars="vertical"
+        android:scrollbarAlwaysDrawVerticalTrack="true">
+        <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/TextView_Nickname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/settings_nickname"
+                android:textSize="@dimen/help_text_size"
+                android:textStyle="bold"></TextView>
+            <EditText
+                android:id="@+id/EditText_Nickname"
+                android:layout_height="wrap_content"
+                android:maxLength="20"
+                android:layout_width="match_parent"
+                android:maxLines="1"
+                android:inputType="textPersonName"></EditText>
+            <TextView
+                android:id="@+id/TextView_Email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/settings_email"
+                android:textSize="@dimen/help_text_size"
+                android:textStyle="bold"></TextView>
+            <EditText
+                android:id="@+id/EditText_Email"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:maxLines="1"
+                android:inputType="textEmailAddress"></EditText>
+            <TextView
+                android:id="@+id/TextView_Password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/settings_password"
+                android:textSize="@dimen/help_text_size"
+                android:textStyle="bold"></TextView>
+            <LinearLayout
+                android:id="@+id/LinearLayoutPassword"
+                android:orientation="horizontal"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent">
+                <Button
+                    android:id="@+id/Button_Password"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/settings_button_pwd"
+                    android:onClick="onSetPasswordButtonClick"></Button>
+                <TextView
+                    android:id="@+id/TextView_Password_Info"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textSize="@dimen/help_text_size"
+                    android:textStyle="bold"
+                    android:gravity="center"></TextView>
+            </LinearLayout>
+            <TextView
+                android:id="@+id/TextView_DOB"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/settings_dob"
+                android:textSize="@dimen/help_text_size"
+                android:textStyle="bold"></TextView>
+            <LinearLayout
+                android:id="@+id/LinearLayout01"
+                android:orientation="horizontal"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent">
+                <Button
+                    android:id="@+id/Button_DOB"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/settings_button_dob"
+                    android:onClick="onPickDateButtonClick"></Button>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textSize="@dimen/help_text_size"
+                    android:textStyle="bold"
+                    android:gravity="center"
+                    android:id="@+id/TextView_DOB_Info"></TextView>
+            </LinearLayout>
+            <TextView
+                android:id="@+id/TextView_Gender"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/settings_gender"
+                android:textSize="@dimen/help_text_size"
+                android:textStyle="bold"></TextView>
+            <Spinner
+                android:id="@+id/Spinner_Gender"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:entries="@array/genders"></Spinner>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
