--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -10,4 +10,7 @@
     <color name="title_glow">#F00</color>
     <color name="menu_color">#FFFF0F</color>
     <color name="menu_glow">#F00</color>
+    
+    <!-- setting screen -->
+	<color name="error_color">#F00</color>
 </resources>
